@startuml

'Direccion of the diagram'
left to right direction
'Used style'
skinparam backgroundColor #F5E6CC
'Classes'
skinparam classBackgroundColor #A7C7E7
skinparam classBorderColor #000000
skinparam shadowing true
skinparam roundcorner 15
'Titles'
skinparam classFontColor #000000
skinparam classFontStyle bold
'Relationships'
skinparam classArrowColor #4CAF50
skinparam classArrowThickness 2
skinparam classArrowFontColor black
skinparam classArrowFontSize 11
skinparam nodesep 60
skinparam ranksep 10

class Account {
    +accountNumber
    +balance

}

class Client {
    +client_id
    +name
    +email
}

class CreditCard {
    +cardNumber
    +expirationDate
    +cvv
}

class AccountMovements {
+movement_id
    +date
    +amount
    +description
}

Client "1" -- "1" Account : relates >
Account "1" -- "1" CreditCard : relates >
Account "1" - "1" AccountMovements : relates >


@enduml

